--- a/app/src/main/res/layout/ny_fragment_profile.xml
+++ b/app/src/main/res/layout/ny_fragment_profile.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_tab"
+    android:background="@color/ny_main_bg"
     >
 
     <RelativeLayout
@@ -36,6 +36,7 @@
             android:layout_toRightOf="@id/ny_photo_iv"
             android:layout_marginLeft="12dp"
             android:textSize="14sp"
+            android:text="随机"
             android:textColor="@color/text_black"
             />
     </RelativeLayout>
@@ -54,8 +55,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="清理缓存"
+            android:text="@string/clear_cache"
             android:layout_marginLeft="8dp"
+            android:textSize="14sp"
+            android:textColor="@color/lb_grey"
             />
     </RelativeLayout>
     <RelativeLayout
@@ -71,14 +74,16 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="版本信息"
+            android:textSize="14sp"
             android:textColor="@color/lb_grey"
             android:gravity="center_vertical"
             android:layout_marginLeft="8dp"
             />
         <TextView
+            android:id="@+id/version_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="1.0.0"
+            android:textSize="14sp"
             android:textColor="@color/lb_grey"
             android:gravity="center_vertical"
             android:layout_marginRight="8dp"
@@ -97,7 +102,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="关于"
+            android:text="@string/about"
+            android:textColor="@color/lb_grey"
+            android:textSize="14sp"
             android:gravity="center_vertical"
             android:layout_marginLeft="8dp"
             />
@@ -110,5 +117,10 @@
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:textColor="@color/white"
+        android:text="@string/logout"
+        android:gravity="center"
+        android:textSize="16sp"
+        android:background="@drawable/ny_login_bt_selector"
         />
 </RelativeLayout>
