--- a/app/src/main/res/layout/ny_home_title.xml
+++ b/app/src/main/res/layout/ny_home_title.xml
@@ -16,6 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:textSize="18sp"
+        android:textColor="@color/text_black"
         android:gravity="center_vertical"
         />
 </LinearLayout>
