--- a/app/src/main/res/layout/recycle_view_fragment.xml
+++ b/app/src/main/res/layout/recycle_view_fragment.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/ny_main_bg"
     >
 
    <com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView
