--- a/app/src/main/res/layout/third_login_activity.xml
+++ b/app/src/main/res/layout/third_login_activity.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,6 +18,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
+        android:text="微信"
+        android:gravity="center"
+        android:drawablePadding="8dp"
+        android:textSize="16sp"
+        android:textColor="@color/text_black"
         />
     <TextView
         android:id="@+id/sina_tv"
@@ -23,6 +30,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
+        android:text="微博"
+        android:gravity="center"
+        android:drawablePadding="8dp"
+        android:textSize="16sp"
+        android:textColor="@color/text_black"
         />
     </LinearLayout>
 </RelativeLayout>
