--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" >
-
+    <style name="NYAppTheme" >
+        <item name="android:background">@color/white</item>
     </style>
 
     <style name="NYFullScree" parent="Theme.AppCompat.Light.NoActionBar">
