--- a/app/src/main/res/layout/ny_fragment_profile.xml
+++ b/app/src/main/res/layout/ny_fragment_profile.xml
@@ -25,7 +25,7 @@
             android:layout_marginLeft="4dp"
             android:layout_centerVertical="true"
             android:padding="1dp"
-            android:src="@drawable/app_icon"
+            android:src="@drawable/base_avatar_default_bg"
             />
 
         <TextView
