--- a/app/src/main/res/layout/pic_comment_item_view.xml
+++ b/app/src/main/res/layout/pic_comment_item_view.xml
@@ -17,7 +17,7 @@
         app:riv_border_width="1dp"
         app:riv_corner_radius="15dp"
         app:riv_oval="true"
-        android:src="@drawable/xiao_xin"
+        android:src="@drawable/base_avatar_default_bg"
         />
 
     <TextView
