--- a/app/src/main/res/layout/third_login_activity.xml
+++ b/app/src/main/res/layout/third_login_activity.xml
@@ -12,6 +12,7 @@
         android:layout_centerInParent="true"
         android:gravity="center_horizontal"
         >
+        <!--需要交钱获得开发者认证资格300元-->
     <TextView
         android:id="@+id/weixin_tv"
         android:drawableTop="@drawable/icon_share_weixin"
@@ -23,6 +24,7 @@
         android:drawablePadding="8dp"
         android:textSize="16sp"
         android:textColor="@color/text_black"
+        android:visibility="gone"
         />
     <TextView
         android:id="@+id/sina_tv"
