--- a/app/src/main/res/layout/comment_bottom.xml
+++ b/app/src/main/res/layout/comment_bottom.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
+    android:clickable="true"
     android:paddingTop="8dp">
 
     <TextView
