--- a/app/src/main/res/layout/ny_beauty_show_item.xml
+++ b/app/src/main/res/layout/ny_beauty_show_item.xml
@@ -22,6 +22,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:src="@drawable/share"
+        android:visibility="gone"
         />
 
     <ProgressBar
