--- a/app/src/main/res/layout/ny_progress_dialog.xml
+++ b/app/src/main/res/layout/ny_progress_dialog.xml
@@ -20,7 +20,7 @@
             android:orientation="horizontal">
 
             <android.support.v4.widget.ContentLoadingProgressBar
-                style="@android:style/Widget.Holo.ProgressBar.Large"
+                style="@android:style/Widget.Holo.ProgressBar.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
