--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -6,7 +6,7 @@
     android:background="@color/white"
     >
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/news_detail_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
