--- a/app/src/main/res/layout/ny_progress_dialog.xml
+++ b/app/src/main/res/layout/ny_progress_dialog.xml
@@ -19,7 +19,7 @@
             android:layout_centerInParent="true"
             android:orientation="horizontal">
 
-            <android.support.v4.widget.ContentLoadingProgressBar
+            <androidx.core.widget.ContentLoadingProgressBar
                 style="@android:style/Widget.Holo.ProgressBar.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
