--- a/baselib/src/main/res/layout/layout_default_page_status_error.xml
+++ b/baselib/src/main/res/layout/layout_default_page_status_error.xml
@@ -15,7 +15,7 @@
             android:layout_width="@dimen/dimen_empty_image_size_width"
             android:layout_height="@dimen/dimen_empty_image_size_height"
             android:layout_gravity="center"
-            android:src="@mipmap/ic_empty" />
+            android:src="@drawable/ic_empty" />
 
         <TextView
             android:id="@+id/layout_page_status_error_tv"
